[#215] fixes some style issues on small screens

--- a/src/client/common/forms/forms.scss
+++ b/src/client/common/forms/forms.scss
@@ -6,14 +6,12 @@
   align-content: flex-start;
   align-items: baseline;
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
   margin-top: $margin-top;
   width: 100%;
 
   @include respond-to(tablet, desktop) {
-    flex-direction: row;
     width: auto;
   }
 }
